# hebrew-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MVP_PLAN.md  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 644521425f9a_add_word_analysis_cache.py  9d26a04a0da7_add_enums_generation.py  aae4cf02b2c3_init.py  b00e90813a7c_make_timestamps_timezone_aware.py  d2ec685ceb80_tighten_nullable_on_json_columns_and_.py
evals/: aggregate.py  cache.py  conftest.py  test_generation.py  test_providers_smoke.py
evals/dataset/: golden.json  word_analysis_golden.json
evals/judges/: __init__.py  grammar_judge.py  level_judge.py  topic_judge.py
src/hebrew_backend/: database.py  enums.py  main.py  models.py  schemas.py  settings.py
src/hebrew_backend/routers/: health.py  sessions.py  users.py  words.py
src/hebrew_backend/services/: generation.py  word_analysis.py
src/hebrew_backend/services/llm/: __init__.py  base.py  providers.py
