[project]
name = "hebrew-backend"
version = "0.1.0"
description = "FastApi backend for hebrew learning app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "hatchling>=1.29.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hebrew_backend"]
