[project]
name = "hebrew-backend"
version = "0.1.0"
description = "FastApi backend for hebrew learning app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "hatchling>=1.29.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hebrew_backend"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "C4",
    "SIM",
    "RUF",
    "T20",
    "PT",
    "ASYNC",
    "S",
    "BLE",
    "LOG",
    "TRY",
    "RET",
    "PTH",
    "ERA",
    "PIE",
    "TC",
]

ignore = [
    "E501",
    "B008",
    "TRY003",
    "S101",
    "RUF012",
    "N818",
    "TRY300",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ARG",
    "PLR2004",
    "S105",
    "S106",
]
"alembic/versions/*.py" = ["ALL"]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
disallow_untyped_defs=true
no_implicit_optional=true
warn_return_any=true
